--- a/index.html
+++ b/index.html
@@ -356,10 +356,8 @@
                                 <p>BT23's biomass estimates are constrained to promote net carbon sequestration, water regulation, and other ecosystem services. If land management practices deviate from the sustainability constraints assumed in this report, more biomass could be produced but with possible unintended consequences. For example, more agricultural residues could be available at risk of increasing soil erosion.</p>
                             </div>
                         </div>
-                        <div class="row justify-content-center">
-                            <div class="col-10">
-                                <h3>Emerging Biomass Resources: Microalgae, Macroalgae, and Point-Source Waste Carbon Dioxide</h3>
-                            </div>
+                            <h3>Emerging Biomass Resources: Microalgae, Macroalgae, and Point-Source Waste Carbon Dioxide</h3>
+                            <div class="row d-flex justify-content-center">
                             <div class="col-lg-6">
                                 <p>Beyond the billion-ton biomass estimates in BT23, the following resources could potentially expand that supply with technological innovations and cost reductions: </p>
                                 <ul>
@@ -374,7 +372,7 @@
                                     <div id="emerging"></div>
                                 </figure>
                             </div>
-                            <div class="col-10">
+                                </div>
                                 <div class="well d-flex justify-content-center align-items-center my-4">
                                     <img src="assets/images/icon-chapter.svg" alt="" class="float-start me-3 moreinfo">
                                     <p class="mb-0 lh-sm">Read <strong>[LINK TO PDF]</strong> Chapter 7. Microalgae, Macroalgae, and Point-Source Carbon Dioxide Waste Streams for more details.</p>
@@ -388,8 +386,6 @@
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
         </section>
         
         
