--- a/index-w-alternate-carousel.html
+++ b/index-w-alternate-carousel.html
@@ -16,6 +16,7 @@
     <link href="https://fonts.googleapis.com/css?family=Karla:400,400i,700,700i" rel="stylesheet">
     <link href="client/css/app.min.css" rel="stylesheet">
     <link href="client/css/billion-ton-report.css" rel="stylesheet">
+    <link href="client/css/carousel-1.css" rel="stylesheet">
       
     <style>
         
