--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ html {
             <div class="row justify-content-center mb-5">
                 <div class="col-lg-10">
                     <h3>Additional Biomass in the Near-Term</h3>
-                    <img src="assets/images/additional-biomass-near-term-getty-1437667820.jpg" class="img-fluid mb-3" alt="" />
+                    <img src="assets/images/additional-biomass-near-term-getty-1437667820.jpg" class="img-fluid mb-3" alt="" data-aos="fade-in" />
                 </div>
                 <div class="col-lg-6">
                   <h4>Growing Today's Underused Biomass Supply</h4>
@@ -347,7 +347,7 @@ html {
                 </div>
                 <div class="col-lg-10">
                     <h3 mt-5>Additional Biomass in Mature-Market Scenarios</h3>
-                    <img src="assets/images/additional-biomass-mature-market-p02822.jpg" class="img-fluid mb-3" alt="" />
+                    <img src="assets/images/additional-biomass-mature-market-p02822.jpg" class="img-fluid mb-3" alt="" data-aos="fade-in" />
                 </div>
                 <div class="col-lg-6">
                     <h4>Reaching ~1 Billion Tons with Purpose-Grown Energy Crops</h4>
@@ -466,7 +466,7 @@ html {
             <div class="row d-flex justify-content-center">
                 <div class="col-lg-10">
                      <h3>Emerging Biomass Resources: Microalgae, Macroalgae, and Point-Source Waste Carbon Dioxide</h3>
-                    <img src="assets/images/emerging-nrel-22155-getty-1360462597-176965161.jpg" class="img-fluid mb-3" alt="" />
+                    <img src="assets/images/emerging-nrel-22155-getty-1360462597-176965161.jpg" class="img-fluid mb-3" alt="" data-aos="fade-in" />
                 </div>
                 <div class="col-lg-6">
                     <p>Beyond the billion-ton biomass estimates in BT23, the following resources could potentially expand that supply with technological innovations and cost reductions: </p>
