--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ html {
             <div class="row justify-content-center mb-5">
                 <div class="col-lg-10">
                     <h3>Biomass Used Today</h3>
-                    <img src="assets/images/biomass-used-today-getty-1286876892.jpg" class="img-fluid mb-3" alt="" />
+                    <img src="assets/images/biomass-used-today-getty-1286876892.jpg" class="img-fluid mb-3" alt="" data-aos="fade-in" />
                 </div>
                 <div class="col-lg-6">
                     <p>Today, bioenergy provides about 5% of U.S. energy, in the form of liquid fuels, power, and heat. Bioenergy resources are largely concentrated in the corn belt, Southeast timberlands, and metropolitan areas.</p>
