--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 <link href="client/css/billion-ton-report.css" rel="stylesheet">
 <!-- Animate on Scroll https://michalsnik.github.io/aos/ -->
 <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-
+<!-- overlapping carousel
+<link rel="stylesheet" href="client/css/overlapping-carousel.css" /> -->
+<!-- test zone -->
 <style>
 #boxThis {width:100%; text-align: center;}  
 #boxThis.box {
@@ -37,7 +39,7 @@ html {
     }
 
 </style>
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script> 
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script> 
 <title>2023 Billion-Ton Report: An Assessment of U.S. Renewable Carbon Resources</title>
 
 <!-- Google Analytics
@@ -198,7 +200,7 @@ html {
             <div class="col-auto">
                     <div class="bg-white p-2 mb-5 text-center">
                         <img src="assets/images/kdf-icon.jpg" alt="KDF icon" class="floatl-left me-3">
-                        To explore interactive maps, graphics, and data, visit the BT23 data portal <strong>[NEED LINK]</strong>.
+                        To explore interactive maps, graphics, and data, visit the <a href="https://biokdf.ornl.gov/bt23-data-portal/">BT23 data portal</a>.
                     </div>
                 </div>
             </div>
@@ -231,7 +233,7 @@ html {
                 <div class="col-lg-4">
                     <figure class="highcharts-figure mt-0" data-aos="fade-left" data-aos-offset="200">
                     <div id="today"></div>
-                    <p class="highcharts-description lh-sm">Biomass used today. Visit the <strong>[NEED LINK]</strong> BT23 data portal for complete data.</p>
+                    <p class="highcharts-description lh-sm">Biomass used today. Visit the <a href="https://biokdf.ornl.gov/bt23-data-portal/">BT23 data portal</a> for complete data.</p>
                 </figure>
                 </div>
             </div>
@@ -248,7 +250,7 @@ html {
                 <div class="col-lg-4">
                     <figure class="highcharts-figure mt-0" data-aos="fade-left" data-aos-offset="200">
                         <div id="nearterm"></div>
-                        <p class="highcharts-description lh-sm">Additional biomass in the BT23 mature-market medium scenario. Visit the <strong>[NEED LINK]</strong> BT23 data portal for complete data.</p>
+                        <p class="highcharts-description lh-sm">Additional biomass in the BT23 near-term scenario. Visit the <a href="https://biokdf.ornl.gov/bt23-data-portal/">BT23 data portal</a> for complete data.</p>
                     </figure>
                 </div>
                 <div class="col-lg-10">
@@ -272,7 +274,7 @@ html {
                                       BT23 estimated potential for bioenergy: <strong>~217 million tons.</strong>
                                     </div>
                                     <div class="well d-flex justify-content-center align-items-center my-4">
-                                        <img src="assets/images/icon-chapter.svg" alt="" class="float-start me-3 moreinfo">
+                                        <img src="assets/images/wastes-getty-1253813484.jpg" alt="ALT TEXT NEEDED" class="float-start me-3 moreinfo">
                                         <p class="mb-0 lh-sm">Read <strong>[NEED LINK]</strong> Chapter 3. Waste Resources and Byproducts for more details.</p>
                                     </div>
                                 </div>
@@ -307,7 +309,7 @@ html {
                                     </div>
                                  </div>
                                  <div class="col-lg-5">
-                                     <img src="https://placehold.co/720x400" class="img-fluid mt-2 mb-3" alt="">
+                                     <img src="assets/images/logging-residues-getty1024531572.jpg" class="img-fluid mt-2 mb-3" alt="">
                                  </div>
                           </div>
                         </div>
@@ -337,7 +339,7 @@ html {
                                     </div>
                                  </div>
                                  <div class="col-lg-5">
-                                     <img src="https://placehold.co/720x400" class="img-fluid mt-2 mb-3" alt="">
+                                     <img src="assets/images/agricultural-residues-getty179084850.jpg" class="img-fluid mt-2 mb-3" alt="ALT TEXT NEEDED">
                                  </div>
                           </div>
                         </div>
@@ -365,7 +367,7 @@ html {
                 <div class="col-lg-4">
                     <figure class="highcharts-figure mt-0" data-aos="fade-left" data-aos-offset="200">
                         <div id="maturemarket"></div>
-                        <p class="highcharts-description lh-sm">Additional biomass in mature market scenarios. Visit the <strong>[NEED LINK]</strong> BT23 data portal for complete data.</p>
+                        <p class="highcharts-description lh-sm">Additional biomass in the BT23 mature-market medium scenario. Visit the <a href="https://biokdf.ornl.gov/bt23-data-portal/">BT23 data portal</a> for complete data.</p>
                     </figure>
                 </div>
 
@@ -376,21 +378,27 @@ html {
                         <div class="carousel-inner">
 
                         <div class="carousel-item active text-center">
+                            <h4 class="h3 text-center">Total U.S. Waste Resources</h4>
                             <img class="" src="assets/images/pie-wastes.png" alt="ALT TEXT NEEDED" />
                         </div>
                         <div class="carousel-item  text-center">
+                            <h4 class="h3 text-center">Total U.S. Logging Residues</h4>
                             <img class="" src="assets/images/pie-logging.png" alt="ALT TEXT NEEDED" />
                         </div>
                         <div class="carousel-item text-center">
-                            <img class="" src="assets/images/pie-ag-residues.png" alt="ALT TEXT NEEDED" />
-                        </div>
-                        <div class="carousel-item text-center">
-                            <img class="" src="assets/images/pie-tree-biomass.png" alt="ALT TEXT NEEDED" />
-                        </div>
-                        <div class="carousel-item text-center">
+                            <h4 class="h3 text-center">Total U.S. Mill Residues</h4>
                             <img class="" src="assets/images/pie-forest-mill-residues.png" alt="ALT TEXT NEEDED" />
                         </div>
                         <div class="carousel-item text-center">
+                            <h4 class="h3 text-center">U.S. Timberland Growing Stock (Conterminous United States)</h4>
+                            <img class="" src="assets/images/pie-tree-biomass.png" alt="ALT TEXT NEEDED" />
+                        </div>
+                        <div class="carousel-item text-center">
+                            <h4 class="h3 text-center">Total U.S. Agricultural Residues</h4>
+                             <img class="" src="assets/images/pie-ag-residues.png" alt="ALT TEXT NEEDED" />
+                        </div>
+                        <div class="carousel-item text-center">
+                            <h4 class="h3 text-center">Total U.S. Agricultural Land (Conterminous United States</h4>
                             <img class="" src="assets/images/pie-energy-crops.png" alt="ALT TEXT NEEDED" />
                         </div>
 
@@ -411,6 +419,7 @@ html {
                     </div>
 
                     </div>
+                    <!-- div class="carousel"></div -->
                 </div>
                 <div class="col-lg-10">
                     <div class="well d-flex justify-content-center align-items-center my-4">
@@ -479,6 +488,7 @@ html {
                 <div class="col-lg-4">
                     <figure class="highcharts-emerging" data-aos="fade-left" data-aos-offset="200">
                         <div id="emerging"></div>
+                        <p class="highcharts-description lh-sm">Additional biomass in the BT23 emerging scenario. Visit the <a href="https://biokdf.ornl.gov/bt23-data-portal/">BT23 data portal</a> for complete data.</p>
                     </figure>
                 </div>
             </div>
@@ -493,13 +503,15 @@ html {
             <div class="row d-flex justify-content-center">
                 <div class="col-lg-10">
                     <h3>What's Next for Biomass Resources: A Deeper Dive</h3>
+                    <img src="assets/images/es_mmh_emerging_map_v0.2.svg" alt="ALT TEXT NEEDED" class="img-fluid">
+                    <p class="caption">Available biomass by county (in dry short tons per square mile) in BT23’s emerging resource scenario. Visit the <a href="https://biokdf.ornl.gov/bt23-data-portal/">BT23 data portal</a> for complete data.</p>
                     <p>The nation has a portfolio of biomass resources. Some are used today. Some are available now but underutilized. Some could be available in the future&mdash;with different levels of economic accessibility. Together, U.S. biomass resources represent an opportunity to provide renewable energy for hard-to-electrify sectors such as aviation, marine, and rail&mdash;key components of a decarbonized transportation sector.</p>
                 </div>
             </div>
             <div class="row d-flex justify-content-center">
                 <div class="col-lg-10">
                     <div class="well d-flex justify-content-center align-items-center my-4">
-                        <img src="assets/images/icon-chapter.svg" alt="" class="float-start me-3 moreinfo">
+                        <img src="assets/images/icon-chapter.svg" alt="ALT TEXT NEEDED" class="float-start me-3 moreinfo">
                         <p class="mb-0 lh-sm">Read <strong>[LINK TO PDF]</strong> Chapter 8. Looking Forward and Next Steps for more details.</p>
                     </div>
                 </div>
@@ -685,7 +697,7 @@ html {
 <script src="client/js/highchart-nearterm.js"></script>
 <script src="client/js/highchart-maturemarket.js"></script>
 <script src="client/js/highchart-emerging.js"></script>
-
+<!-- src="client/js/overlapping-carousel.js"></script -->
 
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
