--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <div class="row">
-                                        <div class="col-md-7">
+                                        <div class="col-lg-7">
                                          <div class="ratio ratio-16x9">
                                             <div class="ratio ratio-16x9">
                                                 <iframe width="560" height="315" src="https://www.youtube.com/embed/c21QZnQtGqo?si=QppoJiqnI8DS0sxz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> 
@@ -459,7 +459,7 @@
                                             <p class="caption mb-0">Text version</p>
                                         </div>
                                         </div>
-                                        <div class="col-md-5">
+                                        <div class="col-lg-5">
                                             <h3>Video 1</h3>
                                             <p>More information. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque mi arcu, ullamcorper ac vestibulum eu, egestas et justo. Etiam enim magna, tempor at mi in, auctor auctor ligula.</p>
                                         </div>
@@ -467,7 +467,7 @@
                                 </div>
                                 <div class="carousel-item">
                                     <div class="row">
-                                        <div class="col-7">
+                                        <div class="col-lg-7">
                                          <div class="ratio ratio-16x9">
                                             <div class="ratio ratio-16x9">
                                                 <iframe width="560" height="315" src="https://www.youtube.com/embed/c21QZnQtGqo?si=QppoJiqnI8DS0sxz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> 
@@ -475,7 +475,7 @@
                                             <p class="caption mb-0">Text version</p>
                                         </div>
                                         </div>
-                                        <div class="col-5">
+                                        <div class="col-lg-5">
                                             <h3>Video 2</h3>
                                             <p>More information. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque mi arcu, ullamcorper ac vestibulum eu, egestas et justo. Etiam enim magna, tempor at mi in, auctor auctor ligula.</p>
                                         </div>
@@ -483,7 +483,7 @@
                                 </div>
                                 <div class="carousel-item">
                                     <div class="row">
-                                        <div class="col-7">
+                                        <div class="col-lg-7">
                                          <div class="ratio ratio-16x9">
                                             <div class="ratio ratio-16x9">
                                                 <iframe width="560" height="315" src="https://www.youtube.com/embed/c21QZnQtGqo?si=QppoJiqnI8DS0sxz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> 
@@ -491,7 +491,7 @@
                                             <p class="caption mb-0">Text version</p>
                                         </div>
                                         </div>
-                                        <div class="col-5">
+                                        <div class="col-lg-5">
                                             <h3>Video 3</h3>
                                             <p>More information. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque mi arcu, ullamcorper ac vestibulum eu, egestas et justo. Etiam enim magna, tempor at mi in, auctor auctor ligula.</p>
                                         </div>
