--- a/index.html
+++ b/index.html
@@ -528,6 +528,7 @@
                               <a href="#" class="noicon"><img src="https://placehold.jp/150x200.png" alt="2023 Billion-Ton Report Cover" class="img-fluid mb-1 mb-3" /></a>
                             <p><a href="#">2023 Billion-Ton Report: An Assessment of U.S. Renewable Carbon Resources</a></p>
                               <p>Executive Summary</p>
+                              <p>Glossary</p>
                             </div>
                           </div>
                       </div>
@@ -579,7 +580,6 @@
             <div class="row justify-content-center mb-5">
                 <div class="col-lg-10">
                   <h2 class="mt-5">Past Reports</h2>
-                    <p>Learn about <strong>[LINK TO NEW PAGE/SECTION]</strong> the history of the billion-ton reports</p>
                     <div class="row lh-sm">
                         <div class="col-lg-2 col-md-3">
                             <a href="https://www.energy.gov/eere/bioenergy/2016-billion-ton-report"><img src="assets/images/bt16-cover.png" alt="2016 Billion-Ton Report Cover" class="img-fluid" /></a>
