added video controls to carousel

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
                         <div class="carousel-item active text-center">
                             <div class="ratio ratio-16x9">
-                                <video autoplay="autoplay" loop="loop" preload="auto" class="embed-responsive-item vid" poster="https://video.stratus.nrel.gov/bt23-county-map-all-scenarios.jpg" aria-label="Animation showing map interactivity" aria-describedby="videosummary1">
+                                <video controls autoplay="autoplay" loop="loop" preload="auto" class="embed-responsive-item vid" poster="https://video.stratus.nrel.gov/bt23-county-map-all-scenarios.jpg" aria-label="Animation showing map interactivity" aria-describedby="videosummary1">
                                 <source src="https://video.stratus.nrel.gov/bt23-county-map-all-scenarios.mp4" type="video/mp4" />
                                     Please update your browser to view this video.
                                 </video>
@@ -133,7 +133,7 @@
                         </div>
                         <div class="carousel-item  text-center">
                             <div class="ratio ratio-16x9">
-                                    <video autoplay="autoplay" loop="loop" preload="auto" class="embed-responsive-item vid" poster="https://video.stratus.nrel.gov/bt23-treemap-all-scenarios.jpg" aria-label="Animation of treemap visualizations" aria-describedby="videosummary2">
+                                    <video controls autoplay="autoplay" loop="loop" preload="auto" class="embed-responsive-item vid" poster="https://video.stratus.nrel.gov/bt23-treemap-all-scenarios.jpg" aria-label="Animation of treemap visualizations" aria-describedby="videosummary2">
                                     <source src="https://video.stratus.nrel.gov/bt23-treemap-all-scenarios.mp4" type="video/mp4" />
                                     Please update your browser to view this video.
                                     </video>
@@ -142,7 +142,7 @@
                         </div>
                         <div class="carousel-item text-center">
                                 <div class="ratio ratio-16x9">
-                                    <video autoplay="autoplay" loop="loop" preload="auto" class="embed-responsive-item vid" poster="https://video.stratus.nrel.gov/bt23-stepwise-supply-all-scenarios.jpg" aria-label="Animation of step-wise supply charts" aria-describedby="videosummary3">
+                                    <video controls autoplay="autoplay" loop="loop" preload="auto" class="embed-responsive-item vid" poster="https://video.stratus.nrel.gov/bt23-stepwise-supply-all-scenarios.jpg" aria-label="Animation of step-wise supply charts" aria-describedby="videosummary3">
                                         <source src="https://video.stratus.nrel.gov/bt23-stepwise-supply-all-scenarios-v2.mp4" type="video/mp4"  />
                                     Please update your browser to view this video.
                                     </video>
