--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
                         </div>
                         <div id="collapse2a" class="accordion-collapse collapse" aria-labelledby="heading2a" data-bs-parent="#accordion2">
                           <div class="accordion-body">
-                              <a href="#" class="noicon"><img src="assets/images/bt23-cover.jpg" alt="2023 Billion-Ton Report Cover" class="img-fluid mb-1 mb-3" /></a>
+                              <a href="#" class="noicon"><img src="assets/images/bt23-cover.jpg" alt="2023 Billion-Ton Report Cover" class="img-fluid mb-2" /></a>
                             <p><a href="#">2023 Billion-Ton Report: An Assessment of U.S. Renewable Carbon Resources</a></p>
                               <p>Executive Summary</p>
                               <p>Glossary</p>
