--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
     <li class="nav-item">
       <a class="nav-link" href="#past">Past Reports</a>
     </li>
+     <li class="nav-item">
+      <a class="nav-link" href="https://www.energy.gov/eere/bioenergy/beto-webinars">Webinars</a>
+    </li>
   </ul>
 </div>
 </nav>
