--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
     <li class="nav-item">
       <a class="nav-link" href="#past">Past Reports</a>
     </li>
+     <li class="nav-item">
+      <a class="nav-link" href="https://energy.gov/eere/bioenergy/events/webinar-2023-billion-ton-report-assessment-us-renewable-carbon-resources">Webinar</a>
+    </li>
   </ul>
 </div>
 </nav>
